# nanosemantika_test

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  start.sh
app/: app.py  config.py  db.py
app/commands/: populate_db.py
app/repositories/: __init__.py  base.py  components.py  ingredients.py  recipes.py
app/schemas/: __init__.py  recipes.py  responses.py
app/tables/: __init__.py  base.py  recipes.py
app/utils/: common.py
app/views/: __init__.py  base.py  recipes.py
migrations/: env.py
migrations/versions/: 639dba18421c_.py  7d45a9624155_initial.py  9614aea31215_initial.py  ef07a21ad4c4_add_ingredients_to_table.py
