[tool.poetry]
name = "nanosemantika-test"
version = "0.1.0"
description = ""
authors = ["Никита Дерюгин <dafun@icloud.com>"]
readme = "README.md"
packages = [{include = "nanosemantika_test"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
sqlalchemy = "^1.4.47"
pydantic = "^1.10.7"
alembic = "^1.10.2"
python-dotenv = "^1.0.0"
uvicorn = "^0.21.1"
fastapi-utils = "^0.2.1"
asyncpg = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
